fix videojs timeline marker being visible through modal + update videojs-markers plugin

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,17 +1,12 @@
 #modal {
     width: 100%;
     height: 100%;
-    /* Hidden by default */
     display: none;
-    /* Stay in place */
     position: fixed;
-    /* Sit on top */
-    z-index: 9999;
-    /* Location of the box */
+    z-index: 12000;
     padding-top: 50px;
     left: 0;
     top: 0;
-    /* gray out background */
     background: rgba(0, 0, 0, 0.4);
 }
 
